fix(alias): webpack and tsconfig alias path's

--- a/packages/react-scripts/template/tsconfig.prod.json
+++ b/packages/react-scripts/template/tsconfig.prod.json
@@ -1,3 +1,14 @@
 {
-  "extends": "./tsconfig.json"
+  "extends": "./tsconfig.json",
+  "exclude": [
+    "node_modules",
+    "build",
+    "scripts",
+    "acceptance-tests",
+    "webpack",
+    "jest",
+    "src/setupTests.ts",
+    "src/**/*.test.*",
+    "src/**/*.stories.*"
+  ]
 }
