--- a/packages/react-scripts/template/tsconfig.json
+++ b/packages/react-scripts/template/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    "paths": {
+      "@src/*": [ "src/*" ],
+      "@node_modules/*": [ "node_modules/*" ]
+    },
     "outDir": "build/dist",
     "module": "esnext",
     "target": "es5",
